--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -227,6 +227,14 @@
 <p>手足球零組件材料表 (含零組件下載連結)</p>
 <h4>零件尺寸圖</h4>
 <p>零件尺寸圖</p>
+<p><a href="https://cad.onshape.com/documents/546fe57d499b465ceaf24f25/w/4fc5b300cca92f64f2197bd7/e/86c5a39e870920cf48e32e06">桿子&amp;足球員零件尺寸</a><span>  (40623232)<img caption="false" height="658" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/POLE%20PLAYER.png" width="950"/></span></p>
+<p></p>
+<p><a href="https://cad.onshape.com/documents/866b2c34a6185a136b355c93/w/1fb15f7108fd36f9b0a47cff/e/e53ec27394038bff6c66e72d">送球機構 零件尺寸1</a><span><span> </span>(40623232)</span></p>
+<p><span><img caption="false" height="730" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/mechanism2%20(2).png" width="950"/></span></p>
+<p></p>
+<p><a href="https://cad.onshape.com/documents/772ae182f9e699f74182866d/w/56329a73f565e0c4822e54d9/e/1c05d053181404befbd4da60">送球機構 零件尺寸2<span> </span></a><span>(40623232)</span></p>
+<p><img alt="" height="719" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/mechanism2%20(1).png" width="950"/></p>
+<p></p>
 <h4>零件部分組裝圖</h4>
 <p>零件部分組裝圖</p>
 <h4>3D 零組件爆炸圖</h4>
