--- a/content/參數設計與繪圖.html
+++ b/content/參數設計與繪圖.html
@@ -163,6 +163,12 @@ img {
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
+<p><img alt="" height="150" src="https://raw.githubusercontent.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/gh-pages/images/4042320701.PNG" width="179"/> <img alt="" height="150" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320702.PNG?raw=true" width="170"/></p>
+<p><span>桿子長度設定為73+762+308=1143，太短會滑落，太長會對玩家造成干擾。</span></p>
+<p><span><img alt="" height="227" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320703.PNG?raw=true" width="300"/></span></p>
+<p><span>彈簧規格:不鏽鋼線彈簧，壓縮率25%，線徑2.8mm，外徑20mm，內徑14.4mm。</span></p>
+<p><span><img alt="" height="418" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320704.PNG?raw=true" width="300"/></span></p>
+<p><span>球員整體尺寸設計為由老師提供之尺寸作微調。</span></p>
 <p>Onshape 零組件連結</p>
 <hr/>
 <h4><strong>BG4</strong></h4>
@@ -171,8 +177,7 @@ img {
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
-<p>Onshape 零組件連結</p>
-<br />零組件尺寸分析 << <a href='零組件尺寸分析.html'>Previous</a> <a href='細部設計與 BOM.html'>Next</a> >> 細部設計與 BOM</div>
+<p>Onshape 零組件連結</p><br />零組件尺寸分析 << <a href='零組件尺寸分析.html'>Previous</a> <a href='細部設計與 BOM.html'>Next</a> >> 細部設計與 BOM</div>
         
     <!-- footer -->
       <div class="container">
