--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -203,7 +203,8 @@
 <p>執行使用套件</p>
 <p>專案執行過程規劃</p>
 <p>專案執行內容</p>
-<p>專案結論</p><h1>設計與繪圖</h1>
+<p>專案結論</p>
+<h1>設計與繪圖</h1>
 <h2>零組件尺寸分析</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件尺寸分析 (可行性分析)</p>
@@ -235,10 +236,14 @@
 <p><span><span><img alt="" height="931" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/NT1Jneo45X.png" width="950"/></span></span></p>
 <p><span><span>因上述之設計因素考量,對球場與球員之間具與長度做修改(40623223<span>)</span></span></span></p>
 <p><span><span><span><img alt="" height="534" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g5/images/solvespace_MlpQaCqiaF.png" width="950"/></span></span></span></p>
-<p></p><h2>參數設計與繪圖</h2>
+<p></p>
+<h2>參數設計與繪圖</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
+<p><a href="https://cad.onshape.com/documents/f30f0cd8b9dc8ca3ed4382c3/w/0a449a9e4794341cffde87a0/e/93676ac54a40f293a85fc29b">手足球初步設計</a> 40623206</p>
+<p><a href="https://cad.onshape.com/documents/b92411abdaebe22e0adb8b3c/w/211dd7c5430e48c89a541e3a/e/0d575eaebd2dd08fd7b498a4">送球機構初步設計</a> 40623206</p>
+<p><a href="https://cad.onshape.com/documents/fcd2ce4571d668249938c4fb/w/f8cf7d2aff1a9bbd00da57c4/e/8ed15db245d28cf2aa49ffb2">手足球+送球機構完成圖</a> 40623206</p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
@@ -254,8 +259,7 @@
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
-<p>Onshape 零組件連結</p>
-<h2>細部設計與 BOM</h2>
+<p>Onshape 零組件連結</p><h2>細部設計與 BOM</h2>
 <h4><strong>BG1</strong></h4>
 <h4>手足球零件格式說明</h4>
 <p>手足球零件格式說明</p>
@@ -264,9 +268,13 @@
 <h4>零件尺寸圖</h4>
 <p>零件尺寸圖</p>
 <h4>零件部分組裝圖</h4>
-<p>零件部分組裝圖</p>
+<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/part.png">所有桿子的組合</a></p>
+<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-05-30_21-15-33.gif">送球機構</a></p>
 <h4>3D 零組件爆炸圖</h4>
-<p>3D 零組件爆炸圖</p>
+<p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/0984e5fceef79bc6ab33085e">foosball - explosion</a></p>
+<p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/f13fe80bc56ba5263114a5db">foosball - explosion drawing</a></p>
+<p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/e13cc5000b20206d63c05401">Ball sending mechanism - explosion</a></p>
+<p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/d88618d390dbbdab60b23d38">Ball sending mechanism - explosion drawing</a></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <h4>手足球零件格式說明</h4>
@@ -378,9 +386,7 @@
 <h2>送球機構設計與模擬</h2>
 <h4><strong>BG1</strong></h4>
 <p><a href="https://cad.onshape.com/documents/a666fb3f4021bbf968c7d7ac/w/d021db787c469d7f10149985/e/c8599f3712540ddf9c8d43f0">初步想法</a> 40623206</p>
-<p><a href="https://cad.onshape.com/documents/b92411abdaebe22e0adb8b3c/w/211dd7c5430e48c89a541e3a/e/0d575eaebd2dd08fd7b498a4">送球機構第一版的草圖</a> 40623206</p>
-<p><a href="https://cad.onshape.com/documents/fcd2ce4571d668249938c4fb/w/f8cf7d2aff1a9bbd00da57c4/e/8ed15db245d28cf2aa49ffb2">送球機構第一版</a> 40623206</p>
-<p><a href="https://cad.onshape.com/documents/7ed57906cae5a0dbceec00ca/w/c387f555e04c0cb8a2ad3961/e/bffb012dfbeb527cae1960f8">送球機構第二版</a> 40623206</p>
+<p><a href="https://cad.onshape.com/documents/fcd2ce4571d668249938c4fb/w/f8cf7d2aff1a9bbd00da57c4/e/8ed15db245d28cf2aa49ffb2">送球機構</a> 40623206</p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>初版送球機構設計 (40623215)</p>
@@ -555,11 +561,16 @@
 <p>下載連結;<a href="https://drive.google.com/file/d/1stltNUCA3TBNsBXcunT5DVx0cD42aGI8/view?usp=sharing">機器對手動第一版</a></p>
 <p>目前完成守門員對打部分</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J20mDSVSsJ0" width="500"></iframe></p>
+<p><span>最終版手足球模擬-機器對手動(40423158):</span></p>
+<p>下載連結;<a href="https://drive.google.com/file/d/1eaj6ecl3lIpankWGjdBZQgur_Uf5SOrK/view">機器對手動(最終版)</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3dqeYTxdUQw" width="500"></iframe></p>
+<p></p>
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <p>人對電腦 (40623217)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SmzVGYIxK1g" width="600"></iframe></p><h1>結案報告</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SmzVGYIxK1g" width="600"></iframe></p>
+<h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
