--- a/content/參數設計與繪圖.html
+++ b/content/參數設計與繪圖.html
@@ -156,6 +156,9 @@ img {
 <h4><strong>BG1</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
 <p>Onshape 零組件連結</p>
+<p><a href="https://cad.onshape.com/documents/f30f0cd8b9dc8ca3ed4382c3/w/0a449a9e4794341cffde87a0/e/93676ac54a40f293a85fc29b">手足球初步設計</a> 40623206</p>
+<p><a href="https://cad.onshape.com/documents/b92411abdaebe22e0adb8b3c/w/211dd7c5430e48c89a541e3a/e/0d575eaebd2dd08fd7b498a4">送球機構初步設計</a> 40623206</p>
+<p><a href="https://cad.onshape.com/documents/fcd2ce4571d668249938c4fb/w/f8cf7d2aff1a9bbd00da57c4/e/8ed15db245d28cf2aa49ffb2">手足球+送球機構完成圖</a> 40623206</p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
@@ -171,8 +174,7 @@ img {
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
-<p>Onshape 零組件連結</p>
-<br />零組件尺寸分析 << <a href='零組件尺寸分析.html'>Previous</a> <a href='細部設計與 BOM.html'>Next</a> >> 細部設計與 BOM</div>
+<p>Onshape 零組件連結</p><br />零組件尺寸分析 << <a href='零組件尺寸分析.html'>Previous</a> <a href='細部設計與 BOM.html'>Next</a> >> 細部設計與 BOM</div>
         
     <!-- footer -->
       <div class="container">
