--- a/content/送球機構設計與模擬.html
+++ b/content/送球機構設計與模擬.html
@@ -155,9 +155,7 @@ img {
     <div id="tipue_search_content">V-rep 動態模擬 << <a href='V-rep 動態模擬.html'>Previous</a> <a href='系統功能展示.html'>Next</a> >> 系統功能展示<br /><h1>送球機構設計與模擬</h1>
 <h4><strong>BG1</strong></h4>
 <p><a href="https://cad.onshape.com/documents/a666fb3f4021bbf968c7d7ac/w/d021db787c469d7f10149985/e/c8599f3712540ddf9c8d43f0">初步想法</a> 40623206</p>
-<p><a href="https://cad.onshape.com/documents/b92411abdaebe22e0adb8b3c/w/211dd7c5430e48c89a541e3a/e/0d575eaebd2dd08fd7b498a4">送球機構第一版的草圖</a> 40623206</p>
-<p><a href="https://cad.onshape.com/documents/fcd2ce4571d668249938c4fb/w/f8cf7d2aff1a9bbd00da57c4/e/8ed15db245d28cf2aa49ffb2">送球機構第一版</a> 40623206</p>
-<p><a href="https://cad.onshape.com/documents/7ed57906cae5a0dbceec00ca/w/c387f555e04c0cb8a2ad3961/e/bffb012dfbeb527cae1960f8">送球機構第二版</a> 40623206</p>
+<p><a href="https://cad.onshape.com/documents/fcd2ce4571d668249938c4fb/w/f8cf7d2aff1a9bbd00da57c4/e/8ed15db245d28cf2aa49ffb2">送球機構</a> 40623206</p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <p>初版送球機構設計 (40623215)</p>
@@ -289,8 +287,7 @@ img {
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x51b3j6cYKs" width="560"></iframe></p>
 <p><a href="https://youtu.be/nSbpWyDZdTA">送球機構模擬第二步驟</a>(40623244)</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nSbpWyDZdTA" width="560"></iframe></p>
-<p></p>
-<br />V-rep 動態模擬 << <a href='V-rep 動態模擬.html'>Previous</a> <a href='系統功能展示.html'>Next</a> >> 系統功能展示</div>
+<p></p><br />V-rep 動態模擬 << <a href='V-rep 動態模擬.html'>Previous</a> <a href='系統功能展示.html'>Next</a> >> 系統功能展示</div>
         
     <!-- footer -->
       <div class="container">
