--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -268,13 +268,14 @@
 <h4>零件尺寸圖</h4>
 <p>零件尺寸圖</p>
 <h4>零件部分組裝圖</h4>
-<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/part.png">所有桿子的組合</a></p>
-<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-05-30_21-15-33.gif">送球機構</a></p>
+<p><img caption="false" height="402" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/part.png" width="700"/></p>
+<p>所有桿子的組合 40623206</p>
+<p><a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g1/images/2019-05-30_21-15-33.gif">送球機構</a><span> 40623206</span></p>
 <h4>3D 零組件爆炸圖</h4>
-<p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/0984e5fceef79bc6ab33085e">foosball - explosion</a></p>
-<p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/f13fe80bc56ba5263114a5db">foosball - explosion drawing</a></p>
-<p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/e13cc5000b20206d63c05401">Ball sending mechanism - explosion</a></p>
-<p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/d88618d390dbbdab60b23d38">Ball sending mechanism - explosion drawing</a></p>
+<p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/0984e5fceef79bc6ab33085e">foosball - explosion</a> <span>40623206</span></p>
+<p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/f13fe80bc56ba5263114a5db">foosball - explosion drawing</a> <span>40623206</span></p>
+<p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/e13cc5000b20206d63c05401">Ball sending mechanism - explosion</a> <span>40623206</span></p>
+<p><a href="https://cad.onshape.com/documents/d3e8debbbcfff4b9cbb87d89/w/b4c78ada6e29d50fe20723db/e/d88618d390dbbdab60b23d38">Ball sending mechanism - explosion drawing</a> <span>40623206</span></p>
 <hr/>
 <h4><strong>BG2</strong></h4>
 <h4>手足球零件格式說明</h4>
