--- a/config/content.htm
+++ b/config/content.htm
@@ -257,7 +257,14 @@
 <p><span>彈簧規格:不鏽鋼線彈簧，壓縮率25%，線徑2.8mm，外徑20mm，內徑14.4mm。</span></p>
 <p><span><img alt="" height="418" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320704.PNG?raw=true" width="300"/></span></p>
 <p><span>球員整體尺寸設計為由老師提供之尺寸作微調。</span></p>
-<p>Onshape 零組件連結</p>
+<p><strong>Onshape 零組件連結</strong></p>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/c901b55e1b511649bc1fa923">Player</a></p>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/5eb8eb18255bd7a939be3c04">Ball seat<span>(cover of ball seat)</span></a><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/1eac6640064e2f017e246017"></a></p>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/ea4e1789a66689589dddd1e8">Axis</a></p>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/e9e532d21ec12257194728b3">spring</a></p>
+<p><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/40e39c3ff2f78f7d8f4a7703">Base</a></p>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/0e3d6cf103458a0b429660c3">Throwing mechanism assembly</a><span><a href="https://cad.onshape.com/documents/d72e7569a7798b4b0e9079f9/w/0cd24f2b64a207a740cbd43f/e/f412ca36103c51131b2bf475"><br/></a></span></p>
+<p><a href="https://cad.onshape.com/documents/e2aff841e3efe05bced66d09/w/c0b1955e1e3c7c89d7bddbc8/e/15a3920124f3878336a016bc">Assembly</a></p>
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
