--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -251,7 +251,7 @@
 <hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
-<p><img alt="" height="151" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320701.PNG?raw=true" width="180"/> <img caption="false" height="150" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320702.PNG?raw=true" width="170"/></p>
+<p><img caption="false" height="150" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320701.PNG?raw=true" width="179"/> <img caption="false" height="150" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320702.PNG?raw=true" width="170"/></p>
 <p><span>桿子長度設定為73+762+308=1143，太短會滑落，太長會對玩家造成干擾。</span></p>
 <p><span><img alt="" height="227" src="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1/blob/gh-pages/images/4042320703.PNG?raw=true" width="300"/></span></p>
 <p><span>彈簧規格:不鏽鋼線彈簧，壓縮率25%，線徑2.8mm，外徑20mm，內徑14.4mm。</span></p>
@@ -533,17 +533,17 @@
 <p></p><h2>系統功能展示</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
-<hr>
+<hr/>
 <h4><strong>BG2</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <p>單人足球員模擬 (40623249)</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wEtOXdks_ds" width="560"></iframe></p>
 <p>雙人足球員模擬 (40623249)</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WQ13H6bC_LY" width="560"></iframe></p>
-<hr>
+<hr/>
 <h4><strong>BG3</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
-<hr>
+<hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <p>第一版手足球模擬-手動對手動(40623225)</p>
@@ -577,7 +577,7 @@
 <p>下載連結;<a href="https://drive.google.com/file/d/1eaj6ecl3lIpankWGjdBZQgur_Uf5SOrK/view">機器對手動(最終版)</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3dqeYTxdUQw" width="500"></iframe></p>
 <p></p>
-<hr>
+<hr/>
 <h4><strong>BG5</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <p>人對電腦 (40623217)</p>
@@ -615,4 +615,4 @@
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p></hr></hr></hr></hr>
+<p><span></span></p>
