--- a/config/content.htm
+++ b/config/content.htm
@@ -272,7 +272,8 @@
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
-<p>Onshape 零組件連結</p><h2>細部設計與 BOM</h2>
+<p>Onshape 零組件連結</p>
+<h2>細部設計與 BOM</h2>
 <h4><strong>BG1</strong></h4>
 <h4>手足球零件格式說明</h4>
 <p>手足球零件格式說明</p>
@@ -397,7 +398,8 @@
 <h4>零件部分組裝圖</h4>
 <p>零件部分組裝圖</p>
 <h4>3D 零組件爆炸圖</h4>
-<p>3D 零組件爆炸圖</p><h1>V-rep 動態模擬</h1>
+<p>3D 零組件爆炸圖</p>
+<h1>V-rep 動態模擬</h1>
 <h2>送球機構設計與模擬</h2>
 <h4><strong>BG1</strong></h4>
 <p><a href="https://cad.onshape.com/documents/a666fb3f4021bbf968c7d7ac/w/d021db787c469d7f10149985/e/c8599f3712540ddf9c8d43f0">初步想法</a> 40623206</p>
@@ -537,7 +539,8 @@
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x51b3j6cYKs" width="560"></iframe></p>
 <p><a href="https://youtu.be/nSbpWyDZdTA">送球機構模擬第二步驟</a>(40623244)</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nSbpWyDZdTA" width="560"></iframe></p>
-<p></p><h2>系統功能展示</h2>
+<p></p>
+<h2>系統功能展示</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <hr/>
@@ -553,6 +556,9 @@
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
+<p>攝影機架設(40423158)</p>
+<p>主要讓視角更透明</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Br_4BFrC9c4" width="500"></iframe></p>
 <p>第一版手足球模擬-手動對手動(40623225)</p>
 <p>下載連結:<a href="https://drive.google.com/open?id=1zn-iDygqKOY0GLal_K_GpOUKKjkdw6wi">手動第一版</a></p>
 <p>在11周時將手足球模擬-手動對手動的第一版部分完成</p>
@@ -580,6 +586,10 @@
 <p>下載連結;<a href="https://drive.google.com/file/d/1stltNUCA3TBNsBXcunT5DVx0cD42aGI8/view?usp=sharing">機器對手動第一版</a></p>
 <p>目前完成守門員對打部分</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J20mDSVSsJ0" width="500"></iframe></p>
+<p><span>第二版手足球模擬-機器對手動(40423158):</span></p>
+<p>下載連結;<a href="https://drive.google.com/file/d/1nQI2bo5egtqbbNVHnEDmgz_KxpFZRBXN/view?usp=sharing">機器對手動第二版</a></p>
+<p>大致上都已完成只缺送球機構，此版本球員還未能準確抓住球路線，但能簡易判定球位址</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bnAa8GlCFDQ" width="500"></iframe></p>
 <p><span>最終版手足球模擬-機器對手動(40423158):</span></p>
 <p>下載連結;<a href="https://drive.google.com/file/d/1eaj6ecl3lIpankWGjdBZQgur_Uf5SOrK/view">機器對手動(最終版)</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3dqeYTxdUQw" width="500"></iframe></p>
@@ -601,7 +611,8 @@
 <p><a href="https://drive.google.com/file/d/1W2DXekXXTdaQqccRKhFuXDd1bJ4poh4D/view?usp=sharing">檔案下載</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QDQnJRHG0R0" width="600"></iframe></p>
 <p>玩家視角 (40623248)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p><h1>結案報告</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p>
+<h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
