--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -272,7 +272,23 @@
 <hr/>
 <h4><strong>BG5</strong></h4>
 <p>手足球系統的零組件參數設計與繪圖 (零組件初步設計繪圖)</p>
-<p>Onshape 零組件連結</p><h2>細部設計與 BOM</h2>
+<p><span>足球員 : 這是根據老師給的圖畫出來的，其中很多尺寸都是老師原圖上給的，其他是依據比例做出來的。(40623204)</span></p>
+<p><span><img alt="" height="622" src="https://mdecadp2018.github.io/site-40623204/images/%E8%B6%B3%E7%90%83%E5%93%A1.PNG" width="600"/></span></p>
+<p></p>
+<p><span>球 : 大小是以人的大小，依比例畫出來的。(40623204)</span></p>
+<p><span><img alt="" height="352" src="https://mdecadp2018.github.io/site-40623204/images/%E7%90%83.PNG" width="400"/></span></p>
+<p><span></span></p>
+<p><span>握桿 : 直徑老師給的圖畫出來的，長度是以球場的寬度再加上手握的地方得到的長度。(40623204)</span></p>
+<p><span><img alt="" height="287" src="https://mdecadp2018.github.io/site-40623204/images/%E6%8F%A1%E6%A1%BF.PNG" width="400"/></span></p>
+<p><span></span></p>
+<p><span>球場 : 依市面上常見的手足球滑的大概，握桿的地方是根據老師給的圖設定的，進球的地方是臨時設計的。(40623204)</span></p>
+<p><span><img alt="" height="331" src="https://mdecadp2018.github.io/site-40623204/images/%E7%90%83%E5%A0%B4.PNG" width="600"/></span></p>
+<p><span></span></p>
+<p></p>
+<p>Onshape 零組件連結</p>
+<p><a href="https://cad.onshape.com/documents/beea80ab157b5c6fce1314ef/w/48391349dbaefae52b3ad62d/e/0c9ee64798e9da17fc76db8b">手足球球場</a>(40623204)</p>
+<p><a href="https://cad.onshape.com/documents/42c36a84d62950168ebca0f3/w/f1702970d1df65d422c8473c/e/bd76f28373fbad738b5cb1ae">手足球員</a><span>(40623204)</span></p>
+<p><span><a href="https://cad.onshape.com/documents/ce9a467c873433002afbebbe/w/990ac62b0487b86db707dfda/e/3b1e99e137582926f26a4ce6">桿子</a>(40623204)</span></p><h2>細部設計與 BOM</h2>
 <h4><strong>BG1</strong></h4>
 <h4>手足球零件格式說明</h4>
 <p>手足球零件格式說明</p>
@@ -358,16 +374,16 @@
 <hr/>
 <p><img alt="" height="492" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E6%A1%BFA%E7%B5%84%E5%90%88.png" width="700"/></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/e8921a0f64a3db51c8790bf4">手足球桿A組合</a>Final version<span> - 40623224</span>)</span></p>
-<hr/>
+<hr>
 <p><span><img alt="" height="492" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E6%A1%BFB%E7%B5%84%E5%90%88.png" width="700"/></span></p>
 <p><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/29cb69e60478d4390c59e2e4">手足球桿B組合</a><span>Final version</span><span> - 40623224</span><span>)</span></span></p>
-<hr/>
+<hr>
 <p><span><span><img alt="" height="490" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E6%A1%BFC%E7%B5%84%E5%90%88.png" width="700"/></span></span></p>
 <p><span><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/bbfa955b4bb72aeb893d447f">手足球桿C組合</a><span>Final version</span><span> - 40623224</span><span>)</span></span></span></p>
-<hr/>
+<hr>
 <p><span><span><span><img alt="" height="498" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E6%A1%BFD%E7%B5%84%E5%90%88.png" width="700"/></span></span></span></p>
 <p><span><span><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/d883780dfa902212ae7efa0c">手足球桿D組合</a><span>Final version</span><span> - 40623224</span><span>)</span></span></span></span></p>
-<hr/>
+<hr>
 <p><span><span><span><span><img alt="" height="489" src="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g4/images/%E6%89%8B%E8%B6%B3%E7%90%83%E5%8F%B0%E7%B5%84%E5%90%88.png" width="700"/></span></span></span></span></p>
 <p><span><span><span><span>(<a href="https://cad.onshape.com/documents/33f57d6f49b417896c80e2c7/w/0cd8abcf32893d42754458f2/e/3332691c77b9b7e6dd661f90">零件部分組裝圖</a><span>Final version</span><span> - 40623224</span><span>)</span></span></span></span></span></p>
 <p><span></span></p>
@@ -397,7 +413,8 @@
 <h4>零件部分組裝圖</h4>
 <p>零件部分組裝圖</p>
 <h4>3D 零組件爆炸圖</h4>
-<p>3D 零組件爆炸圖</p><h1>V-rep 動態模擬</h1>
+<p>3D 零組件爆炸圖</p>
+<h1>V-rep 動態模擬</h1>
 <h2>送球機構設計與模擬</h2>
 <h4><strong>BG1</strong></h4>
 <p><a href="https://cad.onshape.com/documents/a666fb3f4021bbf968c7d7ac/w/d021db787c469d7f10149985/e/c8599f3712540ddf9c8d43f0">初步想法</a> 40623206</p>
@@ -537,7 +554,8 @@
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/x51b3j6cYKs" width="560"></iframe></p>
 <p><a href="https://youtu.be/nSbpWyDZdTA">送球機構模擬第二步驟</a>(40623244)</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nSbpWyDZdTA" width="560"></iframe></p>
-<p></p><h2>系統功能展示</h2>
+<p></p>
+<h2>系統功能展示</h2>
 <h4><strong>BG1</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
 <hr/>
@@ -553,6 +571,9 @@
 <hr/>
 <h4><strong>BG4</strong></h4>
 <p>手足球模擬系統功能展示 (模擬展示與說明影片)</p>
+<p>攝影機架設(40423158)</p>
+<p>主要讓視角更透明</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Br_4BFrC9c4" width="500"></iframe></p>
 <p>第一版手足球模擬-手動對手動(40623225)</p>
 <p>下載連結:<a href="https://drive.google.com/open?id=1zn-iDygqKOY0GLal_K_GpOUKKjkdw6wi">手動第一版</a></p>
 <p>在11周時將手足球模擬-手動對手動的第一版部分完成</p>
@@ -580,6 +601,10 @@
 <p>下載連結;<a href="https://drive.google.com/file/d/1stltNUCA3TBNsBXcunT5DVx0cD42aGI8/view?usp=sharing">機器對手動第一版</a></p>
 <p>目前完成守門員對打部分</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J20mDSVSsJ0" width="500"></iframe></p>
+<p><span>第二版手足球模擬-機器對手動(40423158):</span></p>
+<p>下載連結;<a href="https://drive.google.com/file/d/1nQI2bo5egtqbbNVHnEDmgz_KxpFZRBXN/view?usp=sharing">機器對手動第二版</a></p>
+<p>大致上都已完成只缺送球機構，此版本球員還未能準確抓住球路線，但能簡易判定球位址</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/bnAa8GlCFDQ" width="500"></iframe></p>
 <p><span>最終版手足球模擬-機器對手動(40423158):</span></p>
 <p>下載連結;<a href="https://drive.google.com/file/d/1eaj6ecl3lIpankWGjdBZQgur_Uf5SOrK/view">機器對手動(最終版)</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3dqeYTxdUQw" width="500"></iframe></p>
@@ -601,7 +626,8 @@
 <p><a href="https://drive.google.com/file/d/1W2DXekXXTdaQqccRKhFuXDd1bJ4poh4D/view?usp=sharing">檔案下載</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QDQnJRHG0R0" width="600"></iframe></p>
 <p>玩家視角 (40623248)</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p><h1>結案報告</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/wkhAIW39eGQ" width="560"></iframe></p>
+<h1>結案報告</h1>
 <h2>專案口頭簡報</h2>
 <h4><strong>BG1</strong></h4>
 <p><span>各組利用倉儲中的 Reveal.js 進行結案簡報 (結案口頭簡報)</span></p>
@@ -633,4 +659,4 @@
 <h4><strong>BG5</strong></h4>
 <p><span>各組完成 html 與 pdf 格式之手足球專案結案報告 (文字結案報告書)</span></p>
 <p><span></span></p>
-<p><span></span></p>
+<p><span></span></p></hr></hr></hr></hr>
